--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <nav>
         <a href="file:///F:/curso%20em%20video/estudos/tarefas/tarefa010/pacote-projeto-d010/andoid.html">Home</a>
         <a href="">Notícias</a>     
-        <a href="">Curiosidades</a>
-        <a href="">Fale Conosco</a>
+        <a href="">Contato</a>
     </nav>
     <main>
         <article>
